--- a/index.css
+++ b/index.css
@@ -1,15 +1,22 @@
 body {
     margin: 0;
-    text-align: center
+    text-align: center;
+    background-image: url("basketball-court.jpg");
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    background-position: cover;
 }
 
 .container {
     display: flex;
     justify-content: space-around;
-    background-color: #1B244A;
+    background-color: rgba(127, 99, 71, 0.5);
     width: 575px;
     height: 350px;
-    margin: auto;
+    margin: 30px auto;
+    border: 2px solid black;
+    border-radius: 10px;
 }
 
 h2 {
